force-app/main/default/objects/Cycle_Event__c/Cycle_Event__c.object-meta.xml
<CustomObject>
    <label>Cycle Event</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Cycle Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>