force-app/main/default/objects/Cycle_Event__c/fields/Age_At_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Age_At_Day_1__c</fullName>
    <formula>ROUND
(
    (YEAR( Cycle__r.Day_1__c ) - YEAR( Cycle__r.Contact.Birthdate ))
    +
    (((Cycle__r.Day_1__c - DATE(YEAR(Cycle__r.Day_1__c), 1, 1)) - (Cycle__r.Contact.Birthdate  - DATE(YEAR(Cycle__r.Contact.Birthdate ), 1, 1))) / 365),
    2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age At Day 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>