force-app/main/default/objects/Cycle_Event__c/fields/Assisted_Hatching__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Hatching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assisted Hatching?</label>
    <type>Checkbox</type>
</CustomField>