force-app/main/default/objects/Cycle_Event__c/fields/BX_Scientist__c.field-meta.xml
<CustomField>
    <fullName>BX_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BX Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>