force-app/main/default/objects/Cycle_Event__c/fields/Catheter_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Catheter_Batch_Number__c</fullName>
    <label>Catheter Batch Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>