force-app/main/default/objects/Cycle_Event__c/fields/Concetration__c.field-meta.xml
<CustomField>
    <fullName>Concetration__c</fullName>
    <label>Concetration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>