force-app/main/default/objects/Cycle_Event__c/fields/CW_Scientist__c.field-meta.xml
<CustomField>
    <fullName>CW_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CW Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events5</relationshipName>
    <type>Lookup</type>
</CustomField>