force-app/main/default/objects/Cycle_Event__c/fields/Date_and_Time_of_Thaw__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Thaw__c</fullName>
    <label>Date and Time of Thaw</label>
    <type>DateTime</type>
</CustomField>