force-app/main/default/objects/Cycle_Event__c/fields/Day_1_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Nurse__c</fullName>
    <label>Day 1 Nurse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nurses</valueSetName>
    </valueSet>
</CustomField>