force-app/main/default/objects/Cycle_Event__c/fields/Day_1_Nurse_NEW__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Nurse_NEW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day 1 Nurse</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>