force-app/main/default/objects/Cycle_Event__c/fields/Day_of_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Cycle__c</fullName>
    <formula>IF((Procedure_Date_ONLY__c - Cycle__r.Day_1__c + 1) &gt; 1, &quot;Day &quot; &amp; TEXT(Procedure_Date_ONLY__c - Cycle__r.Day_1__c + 1), &quot;Prior to Day 1&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Cycle</label>
    <type>Text</type>
</CustomField>