force-app/main/default/objects/Cycle_Event__c/fields/Denude_Type__c.field-meta.xml
<CustomField>
    <fullName>Denude_Type__c</fullName>
    <label>Denude Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denude Selected Eggs</fullName>
            </value>
            <value>
                <fullName>Trim Selected Eggs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>