force-app/main/default/objects/Cycle_Event__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>