force-app/main/default/objects/Cycle_Event__c/fields/Eggs_ICSI__c.field-meta.xml
<CustomField>
    <fullName>Eggs_ICSI__c</fullName>
    <formula>Embryo_Batch__r.Number_Treated_by_ICSI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Eggs ICSI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>