force-app/main/default/objects/Cycle_Event__c/fields/Eggs_to_Insem__c.field-meta.xml
<CustomField>
    <fullName>Eggs_to_Insem__c</fullName>
    <label>Eggs to Insem</label>
    <length>10</length>
    <type>Text</type>
</CustomField>