force-app/main/default/objects/Cycle_Event__c/fields/Embryo_Batch__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Embryo Batch</label>
    <referenceTo>Embryo_Batch__c</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>