force-app/main/default/objects/Cycle_Event__c/fields/Embryo_Source__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Source__c</fullName>
    <label>Embryo Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>