force-app/main/default/objects/Cycle_Event__c/fields/ET_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>ET_Date_Only__c</fullName>
    <formula>DATEVALUE(Scheduled_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ET Date Only</label>
    <type>Date</type>
</CustomField>