force-app/main/default/objects/Cycle_Event__c/fields/Event_Record_Medicare_Number__c.field-meta.xml
<CustomField>
    <fullName>Event_Record_Medicare_Number__c</fullName>
    <label>Event Record Medicare Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>