force-app/main/default/objects/Cycle_Event__c/fields/Extra_Equipment_Used__c.field-meta.xml
<CustomField>
    <fullName>Extra_Equipment_Used__c</fullName>
    <description>Extra Equipment for Transfers</description>
    <label>Extra Equipment Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>