force-app/main/default/objects/Cycle_Event__c/fields/EZ__c.field-meta.xml
<CustomField>
    <fullName>EZ__c</fullName>
    <label>EZ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>