force-app/main/default/objects/Cycle_Event__c/fields/Final_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Final_Concentration__c</fullName>
    <label>Final Concentration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>