force-app/main/default/objects/Cycle_Event__c/fields/Final_Volume__c.field-meta.xml
<CustomField>
    <fullName>Final_Volume__c</fullName>
    <label>Final Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>