force-app/main/default/objects/Cycle_Event__c/fields/Foetal_Heartbeats__c.field-meta.xml
<CustomField>
    <fullName>Foetal_Heartbeats__c</fullName>
    <label>Foetal Heartbeats</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>