force-app/main/default/objects/Cycle_Event__c/fields/Foetal_Sacs__c.field-meta.xml
<CustomField>
    <fullName>Foetal_Sacs__c</fullName>
    <label>Foetal Sacs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>