force-app/main/default/objects/Cycle_Event__c/fields/Freeze_Excess_Eggs__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Excess_Eggs__c</fullName>
    <label>Freeze Excess Eggs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>