force-app/main/default/objects/Cycle_Event__c/fields/Freezing_Location__c.field-meta.xml
<CustomField>
    <fullName>Freezing_Location__c</fullName>
    <label>Freezing Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>K1-30A</fullName>
            </value>
            <value>
                <fullName>K1-30B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>