force-app/main/default/objects/Cycle_Event__c/fields/GV__c.field-meta.xml
<CustomField>
    <fullName>GV__c</fullName>
    <label>GV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>