force-app/main/default/objects/Cycle_Event__c/fields/Initial_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Initial_Concentration__c</fullName>
    <label>Initial Concentration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>