force-app/main/default/objects/Cycle_Event__c/fields/Initial_Egg_Freeze_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Egg_Freeze_Date__c</fullName>
    <label>Initial Egg Freeze Date</label>
    <type>Date</type>
</CustomField>