force-app/main/default/objects/Cycle_Event__c/fields/Initial_Motility__c.field-meta.xml
<CustomField>
    <fullName>Initial_Motility__c</fullName>
    <label>Initial Motility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>