force-app/main/default/objects/Cycle_Event__c/fields/Initial_Volume__c.field-meta.xml
<CustomField>
    <fullName>Initial_Volume__c</fullName>
    <label>Initial Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>