force-app/main/default/objects/Cycle_Event__c/fields/Insem_Type__c.field-meta.xml
<CustomField>
    <fullName>Insem_Type__c</fullName>
    <label>Insem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICSI</fullName>
            </value>
            <value>
                <fullName>IVF</fullName>
            </value>
            <value>
                <fullName>Half/Half</fullName>
            </value>
            <value>
                <fullName>ICSI with Ca++</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
            <value>
                <fullName>Egg Freeze</fullName>
                <isActive>false</isActive>
                <label>Egg Freeze</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>