force-app/main/default/objects/Cycle_Event__c/fields/Insem_Type_After_Sperm_Prep__c.field-meta.xml
<CustomField>
    <fullName>Insem_Type_After_Sperm_Prep__c</fullName>
    <label>Insem Type After Sperm Prep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVF</fullName>
            </value>
            <value>
                <fullName>ICSI</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>