force-app/main/default/objects/Cycle_Event__c/fields/Label_Colour__c.field-meta.xml
<CustomField>
    <fullName>Label_Colour__c</fullName>
    <label>Label Colour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>