force-app/main/default/objects/Cycle_Event__c/fields/MI__c.field-meta.xml
<CustomField>
    <fullName>MI__c</fullName>
    <label>MI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>