force-app/main/default/objects/Cycle_Event__c/fields/Microscope__c.field-meta.xml
<CustomField>
    <fullName>Microscope__c</fullName>
    <label>Microscope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>