force-app/main/default/objects/Cycle_Event__c/fields/Motility__c.field-meta.xml
<CustomField>
    <fullName>Motility__c</fullName>
    <label>Motility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>