force-app/main/default/objects/Cycle_Event__c/fields/Multi_Select_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Picklist__c</fullName>
    <label>Multi Select Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAD</fullName>
            </value>
            <value>
                <fullName>Inconclusive/No Result</fullName>
            </value>
            <value>
                <fullName>Untested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>