force-app/main/default/objects/Cycle_Event__c/fields/Needle_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Needle_Batch_Number__c</fullName>
    <label>Needle Batch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>