force-app/main/default/objects/Cycle_Event__c/fields/No_Ooctye__c.field-meta.xml
<CustomField>
    <fullName>No_Ooctye__c</fullName>
    <label>No Ooctye</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>