force-app/main/default/objects/Cycle_Event__c/fields/Notes2__c.field-meta.xml
<CustomField>
    <fullName>Notes2__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>