force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Eggs_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eggs_Frozen__c</fullName>
    <label>Number of Eggs Frozen</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>