force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Eggs_that_Survived__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eggs_that_Survived__c</fullName>
    <label>Number of Eggs that Survived</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>