force-app/main/default/objects/Cycle_Event__c/fields/Number_of_Embryos_With_PGT_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Embryos_With_PGT_Transfered__c</fullName>
    <label>Number of Embryos With PGT Transfered</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>