force-app/main/default/objects/Cycle_Event__c/fields/Nurse_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nurses</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>