force-app/main/default/objects/Cycle_Event__c/fields/OPU_DR__c.field-meta.xml
<CustomField>
    <fullName>OPU_DR__c</fullName>
    <label>OPU DR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>