force-app/main/default/objects/Cycle_Event__c/fields/OPU_Scientist__c.field-meta.xml
<CustomField>
    <fullName>OPU_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OPU Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>