force-app/main/default/objects/Cycle_Event__c/fields/Ovulation_Date__c.field-meta.xml
<CustomField>
    <fullName>Ovulation_Date__c</fullName>
    <defaultValue>(TODAY())</defaultValue>
    <label>Ovulation Date</label>
    <type>Date</type>
</CustomField>