force-app/main/default/objects/Cycle_Event__c/fields/P4__c.field-meta.xml
<CustomField>
    <fullName>P4__c</fullName>
    <label>P4</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>