force-app/main/default/objects/Cycle_Event__c/fields/Patient_ET_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_ET_Number__c</fullName>
    <label>Patient ET Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
                <default>true</default>
                <label>One</label>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Nil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>