force-app/main/default/objects/Cycle_Event__c/fields/Patient_ET_Number_as_Text_Digit_format__c.field-meta.xml
<CustomField>
    <fullName>Patient_ET_Number_as_Text_Digit_format__c</fullName>
    <formula>CASE(TEXT(Patient_ET_Number__c), 
    &quot;One&quot;, &quot;1&quot;, 
    &quot;Two&quot;, &quot;2&quot;, 
    &quot;Nil&quot;, &quot;0&quot;, 
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient ET Number as Text (Digit format)</label>
    <type>Text</type>
</CustomField>