force-app/main/default/objects/Cycle_Event__c/fields/PGT_Thaw_Instructions__c.field-meta.xml
<CustomField>
    <fullName>PGT_Thaw_Instructions__c</fullName>
    <label>PGT Thaw Instructions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAD</fullName>
            </value>
            <value>
                <fullName>Inconclusive/No Result</fullName>
            </value>
            <value>
                <fullName>Untested</fullName>
            </value>
            <value>
                <fullName>Mosaic</fullName>
            </value>
            <value>
                <fullName>PGT-M Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>