force-app/main/default/objects/Cycle_Event__c/fields/PGT_Type__c.field-meta.xml
<CustomField>
    <fullName>PGT_Type__c</fullName>
    <label>PGT Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No PGT</fullName>
            </value>
            <value>
                <fullName>PGT- A</fullName>
            </value>
            <value>
                <fullName>PGT - SR</fullName>
            </value>
            <value>
                <fullName>PGT - M</fullName>
            </value>
            <value>
                <fullName>Non-Invasive</fullName>
                <label>Don&apos;t Touch My Embos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>