force-app/main/default/objects/Cycle_Event__c/fields/Post_Thaw_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Assessment__c</fullName>
    <label>Post-Thaw Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collasped</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>