force-app/main/default/objects/Cycle_Event__c/fields/Post_Thaw_Assessment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Assessment_Percentage__c</fullName>
    <inlineHelpText>Percentage of cells survived during the fz/thaw process.</inlineHelpText>
    <label>Post-Thaw Assessment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>