force-app/main/default/objects/Cycle_Event__c/fields/Prep_Type__c.field-meta.xml
<CustomField>
    <fullName>Prep_Type__c</fullName>
    <label>Prep Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>