force-app/main/default/objects/Cycle_Event__c/fields/Previous_Sperm_Quality__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sperm_Quality__c</fullName>
    <label>Previous Sperm Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swim up</fullName>
            </value>
            <value>
                <fullName>Wash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>