force-app/main/default/objects/Cycle_Event__c/fields/Primary_Sperm_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sperm_Source__c</fullName>
    <label>Primary Sperm Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>