force-app/main/default/objects/Cycle_Event__c/fields/Procedure_Date_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Date_ONLY__c</fullName>
    <formula>DATEVALUE( Procedure_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedure Date ONLY</label>
    <type>Date</type>
</CustomField>