force-app/main/default/objects/Cycle_Event__c/fields/Procedure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Date_Time__c</fullName>
    <defaultValue>NOW() +(1/1440)</defaultValue>
    <label>Procedure Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>