force-app/main/default/objects/Cycle_Event__c/fields/Procedure_Location__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Location__c</fullName>
    <label>Procedure Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compass Fertility</fullName>
            </value>
            <value>
                <fullName>National Capital Private Hospital</fullName>
            </value>
            <value>
                <fullName>Barton Private Hospital</fullName>
            </value>
            <value>
                <fullName>Canberra Private Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>