force-app/main/default/objects/Cycle_Event__c/fields/Related_Embryo__c.field-meta.xml
<CustomField>
    <fullName>Related_Embryo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Embryo</label>
    <referenceTo>Embryo__c</referenceTo>
    <relationshipLabel>Cycle Events</relationshipLabel>
    <relationshipName>Cycle_Events</relationshipName>
    <type>Lookup</type>
</CustomField>