force-app/main/default/objects/Cycle_Event__c/fields/Right_Eggs_Expected_Formula__c.field-meta.xml
<CustomField>
    <fullName>Right_Eggs_Expected_Formula__c</fullName>
    <description>The purpose of this field is soley to display &quot;0&quot; on lab worksheets for expected L and R eggs</description>
    <formula>IF(
    ISBLANK(Number_of_Eggs_Expected_Right__c) || Number_of_Eggs_Expected_Right__c = 0,
    0,
    Number_of_Eggs_Expected_Right__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Right Eggs Expected Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>