force-app/main/default/objects/Cycle_Event__c/fields/RZ__c.field-meta.xml
<CustomField>
    <fullName>RZ__c</fullName>
    <label>RZ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>