force-app/main/default/objects/Cycle_Event__c/fields/Scheduled_Date_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_ONLY__c</fullName>
    <formula>DATEVALUE(  Scheduled_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Date ONLY</label>
    <type>Date</type>
</CustomField>