force-app/main/default/objects/Cycle_Event__c/fields/Scientist_Performing_Event__c.field-meta.xml
<CustomField>
    <fullName>Scientist_Performing_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scientist Performing Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Compass Lab</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cycle_to_Scientist</relationshipName>
    <type>Lookup</type>
</CustomField>