force-app/main/default/objects/Cycle_Event__c/fields/Secondary_Sperm_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sperm_Source__c</fullName>
    <label>Secondary Sperm Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>