force-app/main/default/objects/Cycle_Event__c/fields/Semen_Sample_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample_ID_Number__c</fullName>
    <label>Semen Sample ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>