force-app/main/default/objects/Cycle_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trophectoderm</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>